--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/
-.idea/gradle.xml
-.idea/misc.xml
-.idea/vcs.xml
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+/.idea/**
 *.iws
 *.iml
 *.ipr
